--- a/css/style.css
+++ b/css/style.css
@@ -107,6 +107,7 @@ font-size: 16px;
 line-height: 1.88;
 color: var(--text-accent);
 background:  var(--accent-color);
+cursor: pointer;
 }
 
 
@@ -228,7 +229,7 @@ text-align: center;
 color: var(--text-font);
 background: var(--botom-bg);
 border: 1px solid var(--color-header);
-
+cursor: pointer;
 
 }
 
